# mikant_sim_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mikant_description/share/mikant_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mikant_description/share/mikant_description/meshes/: left_propeller_1.stl  rudder_1.stl  wingsail_1.stl
install/mikant_description/share/mikant_description/urdf/: materials.xacro
install/mikant_gazebo_plugins/share/ament_index/resource_index/parent_prefix_path/: mikant_gazebo_plugins
install/mikant_gazebo_plugins/share/mikant_gazebo_plugins/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mikant_gazebo_plugins/share/mikant_gazebo_plugins/cmake/: mikant_gazebo_pluginsConfig.cmake
install/mikant_sim/share/mikant_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mikant_sim/share/mikant_sim/launch/: gazebo.launch.py
install/mikant_sim/share/mikant_sim/worlds/: rimsra.world
log/: latest_build  latest_list
src/mikant_description/: package.xml  setup.cfg  setup.py
src/mikant_description/launch/: display.launch.py
src/mikant_description/meshes/: right_propeller_1.stl  rudder_1.stl  tail_1.stl  wingsail_1.stl
src/mikant_description/urdf/: mikant.gazebo  mikant.trans  mikant.xacro
src/mikant_gazebo_plugins/: CMakeLists.txt  package.xml
src/mikant_gazebo_plugins/include/mikant_gazebo_plugins/: buoyancy_force_plugin.hh  heading_pid_controller_plugin.hh  lift_drag_force_plugin.hh  revolute_joint_setting_plugin.hh  sail_luffing_controller_plugin.hh  sailboat_states_plugin.hh  three_dof_setting_plugin.hh  wind_world_plugin.hh  yaw_damping_torque_plugin.hh
src/mikant_gazebo_plugins/src/: buoyancy_force_plugin.cc  heading_pid_controller_plugin.cc  lift_drag_force_plugin.cc  revolute_joint_setting_plugin.cc  sail_luffing_controller_plugin.cc  sailboat_states_plugin.cc  three_dof_setting_plugin.cc  wind_world_plugin.cc  yaw_damping_torque_plugin.cc
src/mikant_gazebo_plugins/unused_plugins/include/mikant_gazebo_plugins/: [Old] buoyancy_force_plugin.hh
src/mikant_gazebo_plugins/unused_plugins/src/: [Old] buoyancy_force_plugin.cc
src/mikant_sim/: package.xml  setup.cfg  setup.py
src/mikant_sim/launch/: gazebo.launch.py
src/mikant_sim/worlds/: rimsra.world
